# campman

./: .gitignore  Cargo.toml  Readme.md  design.xopp
core/: Cargo.toml
core/src/: db.rs  lib.rs
core/src/schema/: v1.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
scripts/: add-component
src/: lib.rs  main.rs
src/components/: bimg.rs  button.rs  dashboard.rs  editing_subject.rs  error.rs  events.rs  mod.rs  new_subject.rs  search.rs  sidebar.rs  subject.rs
src/schema/: mod.rs  v1.rs
